--- a/server/views/auth/register.ejs
+++ b/server/views/auth/register.ejs
@@ -49,10 +49,10 @@
                 </fieldset>
 
                 <fieldset class="form-group">
-                    <label for="displayName">Display Name: </label>
+                    <label for="profileName">Profile Name: </label>
                     <input type="text" class="form-control"
-                    name="displayName" placeholder="Enter Display Name"
-                    id="displayName" required>
+                    name="profileName" placeholder="Enter Profile Name"
+                    id="profileName" required>
                 </fieldset>
                 <!--Register form buttons -->
                 <fieldset class="form-group text-right" id="register-buttons">
